syntax = "proto3";

// cd ..
//protoc --proto_path=. --go_out=. --go_opt=paths=source_relative tg_account/*.proto

package tg_account;
//option go_package = ".;tg_account";
option go_package = "github.com/yaruz/app/internal/app/proto/tg_account";

import "google/protobuf/timestamp.proto";


message TgAccount {
  uint64  ID                           = 1;
  string  TgID                         = 2;
  AuthSession AuthSession              = 3;
  google.protobuf.Timestamp CreatedAt  = 4;
}

message AuthSession {
  bytes Key           = 1;
  bytes Hash          = 2;
  int64 Salt          = 3;
  string Hostname     = 4;
}


